src/tests/testfiles/binary-operator-types-19.txt
Error at 2:5: Binary operator operands must have the same type (have float rvalue and char[] rvalue)
4.6 / "a";
^
